version 1.5 -

version 1.4 - 06/17/12
-Added a CITATION file, accessible via citation("paleotree")
-Added randLiveHat option to sampleRanges which controls how the 'hats' of taxa still alive at the modern day are treated
-modified how timeData and timeList input were handled in various functions so that data.frames were converted to matrices
-Added count.cryptic argument to simFossilTaxa and simFossilTaxa_SRCond
-Fixed error where simFossilTaxa_SRCond treated anag.rate as prop.bifurc (and vice versa)
-Cleaning up of help files: fixing typos, weird line breaks, clarification

version 1.3 - 04/17/12
-The various 'bin' time-scaling functions for phylogenies now include a non-stochastic option, for prettier plotting.
-Added new features to sampleRanges for variation in sampling rate similar to Liow et al. 2010
-New feature added to binTimeData to allow for pre-made intervals to be used
-Changed the naming of output from diversity curve functions, simFossilTaxa and sampling rate estimating functions
-Added split.int and timelims arguments to diversity curve functions to stop 'spiky' diversity curve syndrome
-Changed all 'T's and 'F's to TRUE and FALSE statements in code
-Changes made to simFossilTaxa for cryptic cladogenesis, requiring change in output and several other functions
-Changes made to simFossilTaxa for pure-birth simulations
-Changes made to simFossilTaxa_SRcond to fix simulations to right number of nExtant with bifurcation/anagenesis
-The sampling rate/probability estimation functions now print warning messages if convergence does not occur
-Added some additional warning messages to functions
-New function for simulating speciational/cladogenetic patterns of trait evolution under a Brownian model
-New functions for analyzing differences in time-scaling between two phylo objects
-General cleanup of typos and clarification in manual files

version 1.2 - 02/22/12
-changes made to "bin_" time-scaling functions to improve computational speed